--- a/day_08/ab_cpp/CMakeLists.txt
+++ b/day_08/ab_cpp/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(WastelandEscaper)
+project(WastelandEscaper VERSION 1.0)
+
+configure_file(main.h.in main.h)
 
 add_executable(${PROJECT_NAME} main.cpp)
+target_include_directories(${PROJECT_NAME} PUBLIC
+    ${PROJECT_BINARY_DIR}
+)
