--- a/day_08/ab_cpp/CMakeLists.txt
+++ b/day_08/ab_cpp/CMakeLists.txt
@@ -16,3 +16,15 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 target_link_libraries(${PROJECT_NAME} PUBLIC
     WastelandNavigator
 )
+
+enable_testing()
+
+add_test(NAME Example1 COMMAND ${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/input_example_1.txt)
+set_tests_properties(Example1
+    PROPERTIES PASS_REGULAR_EXPRESSION "Steps required to escape wasteland: 2"
+)
+
+add_test(NAME Example2 COMMAND ${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/input_example_2.txt)
+set_tests_properties(Example2
+    PROPERTIES PASS_REGULAR_EXPRESSION "Steps required to escape wasteland: 6"
+)
